# gitmess

./: .gitignore  LICENSE  README.md  install.bat  install_gitmess.sh  install_script.sh  pyproject.toml
gitmess/: __init__.py  gitmess.py
